examples/test/testpolicy12224.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12224
  namespace: namespace276
spec:
  podSelector:
    matchLabels:
      key25: value12
      key6: value24
      key38: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value3
          key29: value38
          key20: value25
